--- a/React/parent_child_edu/frontend/src/styles/AccountSetting.less
+++ b/React/parent_child_edu/frontend/src/styles/AccountSetting.less
@@ -45,6 +45,7 @@
     &__input-container {
         flex: 1;
         font-size: 20px;
+        margin-bottom: 30px;
 
         input {
             margin-top: 20px;
@@ -57,6 +58,45 @@
 }
 
 .update-nickname__confirm {
+    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    position: fixed;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
+    color: white;
+    padding: 10px 20px;
+    box-shadow: 0 2px 10px rgba(102, 126, 234, 0.3);
+}
+
+.update-password {
+    width: 100vw;
+    padding: 60px 30px;
+    box-sizing: border-box;
+    align-items: center;
+
+    &__title {
+        font-size: var(--adm-font-size-10);
+        color: #333;
+        font-weight: 500;
+    }
+
+    &__input-container {
+        flex: 1;
+        font-size: 20px;
+        margin-bottom: 30px;
+
+        input {
+            margin-top: 20px;
+            background-color: #eee;
+            padding: 4px 10px;
+            font-size: 20px;
+            box-sizing: border-box;
+        }
+    }
+}
+
+.update-password__confirm {
     background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     position: fixed;
     bottom: 30px;
