--- a/React/parent_child_edu/frontend/src/styles/MinePage.less
+++ b/React/parent_child_edu/frontend/src/styles/MinePage.less
@@ -14,6 +14,7 @@
             gap: 16px;
 
             .user-avatar {
+                overflow: hidden;
                 width: 2rem;
                 height: 2rem;
                 display: flex;
@@ -22,6 +23,12 @@
                 background-color: rgba(255, 255, 255, 0.2);
                 border-radius: 50%;
 
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+                
                 .iconfont {
                     font-size: 1rem;
                     color: white;
